# pre-commit-config-shellcheck

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Article.html  Article.rst  CONTRIBUTORS  Dockerfile  MANIFEST.in  MIT-LICENSE  Makefile  README.md  README.rst  TODO  action.yaml  entrypoint.sh  pre_commit_config_shellcheck.py  setup.cfg  whitelist.txt
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  SECURITY.md
.github/workflows/: build.yml  check-requirements.yml  check.yml  coveralls.yml  test.yml
tests/: conftest.py  test_pre_commit_config_shellcheck.py
tests/data/: .pre-commit-config.yaml
tests/fixtures/: .pre-commit-config--wrong.yaml  .pre-commit-config.yaml
