[metadata]
name = pre-commit-config-shellcheck
version = 0.0.0
description = Tool for shellchecking entry points in pre-commit YAML config.
python-requires = 3.10.5
license = UNLICENSED

[options]
zip_safe = False
zip_ok = False
install_requires =
    pyyaml==6.0

[options.extras_require]
dev =
    bandit==1.7.4
    black==22.6.0
    bpython==0.22.1
    coverage==6.4.2
    darglint==1.8.1
    dodgy==0.2.1
    dotenv-linter==0.3.0
    flake8-annotations-complexity==0.0.7
    flake8-annotations-coverage==0.0.6
    flake8-broken-line==0.4.0
    flake8-bugbear==22.4.25
    flake8-builtins==1.5.3
    flake8-coding==1.3.2
    flake8-cognitive-complexity==0.1.0
    flake8-comprehensions==3.10.0
    flake8-debugger==4.1.2
    flake8-docstrings==1.6.0
    flake8-eradicate==1.2.1
    flake8-executable==2.1.1
    flake8-expression-complexity==0.0.11
    flake8-fixme==1.1.1
    flake8-functions==0.0.7
    flake8-mutable==1.2.0
    flake8-no-implicit-concat==0.3.3
    flake8-print==5.0.0
    flake8-return==1.1.3
    flake8-simplify==0.19.2
    flake8-typing-imports==1.12.0
    flake8-use-fstring==1.3
    flake8-variables-names==0.0.5
    flake8==3.9.2
    interrogate==1.5.0
    isort==5.10.1
    mypy==0.961
    pep8-naming==0.12.1
    pip-outdated==0.5.0
    pre-commit==2.17.0
    pre-commit-hooks==4.1.0
    pytest-cov==3.0.0
    pytest-mock==3.8.2
    pytest-sugar==0.9.4
    removestar==1.3.1
    rstcheck==6.0.0.post1
    types-PyYAML==6.0.10
    yesqa==1.3.0

[mypy]
files = .
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_calls = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = True
strict_optional = True
strict_equality = True
no_implicit_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unreachable = True
warn_no_return = True


[flake8]
exclude =
 setup.py
max-line-length = 88
select = A,B,C,D,E,F,W,T4,C4,TAE,T,M511,T100,TYP,EXE,CFQ,SIM,DUO,N,DJ,ECE,FS,R,CCR,NIC
ignore = C101, D100, D104
doctests = True
max-annotations-complexity = 5
max-expression-complexity = 5
max-cognitive-complexity = 5

[darglint]
docstring_style = sphinx

[isort]
balanced_wrapping = True
combine_as_imports = True
default_section = FIRSTPARTY
force_grid_wrap = 0
force_sort_within_sections = True
force_to_top = True
include_trailing_comma = True
known_first_party = pre-commit-config-shellcheck
line_length = 88
lines_after_imports = 2
length_sort = True
multi_line_output = 3
use_parentheses = True
virtual_env = $VIRTUAL_ENV

[bandit]
exclude = /.direnv,/tests
tests = B101,B102,B103,B104,B105,B106,B107,B108,B110,B112,B201,B301,B302,B303,B304,B305,B306,B307,B308,B309,B310,B311,B312,B313,B314,B315,B316,B317,B318,B319,B320,B321,B323,B324,B325,B401,B402,B403,B404,B405,B406,B407,B408,B409,B410,B411,B412,B413,B501,B502,B503,B504,B505,B506,B507,B601,B602,B603,B604,B605,B606,B607,B608,B609,B610,B611,B701,B702,B703


[coverage:run]
branch = True
source = .

[coverage:report]
exclude_lines =
    pragma: no cover
